add test cases of lab 3 - problem 2